2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeModel.cpp: 

2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineEditor.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineCellRenderer.h: 

2014-05-19  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2014-05-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* OutlineDragDrop.h:
	* OutlineDragDrop.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp: 

2014-05-19  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp:
	* OutlineTreeModel.h:
	* OutlineTreeModel.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp:
	* NodePropertiesEditor.cpp: 

2014-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.cpp:
	* X3DBrowserEditor.cpp:
	* NodePropertiesEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.cpp:
	* OutlineEditor.cpp: 

2014-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineTreeViewEditor.cpp:
	* NodePropertiesEditor.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* NodePropertiesEditor.h:
	* NodePropertiesEditor.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* NodePropertiesEditor.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.h:
	* OutlineEditor.cpp:
	* NodePropertiesEditor.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h:
	* BrowserWindow.cpp:
	* OutlineEditor.xml:
	* X3DBrowserWidget.cpp:
	* OutlineEditor.h:
	* OutlineEditor.cpp:
	* X3DOutlineEditorInterface.h:
	* X3DOutlineEditorInterface.cpp: 
