@@ -221,6 +221,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_new" swapped="no"/>
                         <accelerator key="n" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -233,6 +234,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_open" swapped="no"/>
                         <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -245,6 +247,7 @@
                         <property name="use_underline">True</property>
                         <property name="image">OpenLocationImage</property>
                         <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_open_location" swapped="no"/>
                         <accelerator key="l" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -256,6 +259,7 @@
                         <property name="use_underline">True</property>
                         <property name="image">FileImportImage</property>
                         <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_import" swapped="no"/>
                       </object>
                     </child>
@@ -281,6 +285,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_save" swapped="no"/>
                       </object>
                     </child>
@@ -292,6 +297,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_save_as" swapped="no"/>
                         <accelerator key="s" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                       </object>
@@ -310,6 +316,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_revert_to_saved" swapped="no"/>
                         <accelerator key="F5" signal="activate"/>
                       </object>
@@ -327,6 +334,7 @@
                         <property name="can_focus">False</property>
                         <property name="image">image8</property>
                         <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_remove_unused_prototypes" swapped="no"/>
                       </object>
                     </child>
@@ -344,6 +352,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_close" swapped="no"/>
                       </object>
                     </child>
@@ -368,6 +377,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_undo" swapped="no"/>
                         <accelerator key="z" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -380,6 +390,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_redo" swapped="no"/>
                         <accelerator key="z" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                       </object>
@@ -398,6 +409,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_cut_nodes_activate" swapped="no"/>
                         <accelerator key="x" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -410,6 +422,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_copy_nodes_activate" swapped="no"/>
                         <accelerator key="c" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -422,6 +435,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_paste_nodes_activate" swapped="no"/>
                         <accelerator key="v" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -434,6 +448,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_delete_nodes_activate" swapped="no"/>
                         <accelerator key="Delete" signal="activate"/>
                       </object>
@@ -489,6 +504,7 @@
                         <property name="can_focus">False</property>
                         <property name="image">image6</property>
                         <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_group_selected_nodes_activate" swapped="no"/>
                         <accelerator key="g" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -500,6 +516,7 @@
                         <property name="can_focus">False</property>
                         <property name="image">image7</property>
                         <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_ungroup_node_activate" swapped="no"/>
                         <accelerator key="g" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                       </object>
@@ -584,6 +601,7 @@
                         <property name="can_focus">False</property>
                         <property name="image">WorkspacesImage</property>
                         <property name="use_stock">False</property>
+                        <property name="always_show_image">True</property>
                         <child type="submenu">
                           <object class="GtkMenu" id="menu6">
                             <property name="visible">True</property>
@@ -810,6 +828,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_fullscreen" swapped="no"/>
                         <accelerator key="F11" signal="activate"/>
                       </object>
@@ -821,6 +840,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_unfullscreen" swapped="no"/>
                         <accelerator key="F11" signal="activate"/>
                       </object>
@@ -846,6 +866,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_select_all_activate" swapped="no"/>
                         <accelerator key="a" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
@@ -951,6 +972,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_standard_size" swapped="no"/>
                       </object>
                     </child>
@@ -962,6 +984,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <property name="accel_group">MenuAccelGroup</property>
+                        <property name="always_show_image">True</property>
                         <signal name="activate" handler="on_info" swapped="no"/>
                       </object>
                     </child>
@@ -979,6 +1002,7 @@
         <child>
           <object class="GtkToolbar" id="ToolBar">
             <property name="can_focus">False</property>
+            <property name="toolbar_style">icons</property>
             <property name="icon_size">1</property>
             <signal name="drag-data-received" handler="on_toolbar_drag_data_received" swapped="no"/>
             <child>
@@ -1235,6 +1259,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="orientation">vertical</property>
+                                <property name="toolbar_style">icons</property>
                                 <property name="icon_size">1</property>
                                 <child>
                                   <object class="GtkRadioToolButton" id="HandButton">
@@ -1555,7 +1580,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Viewpoint Editor</property>
                             <property name="stock">Viewpoint</property>
-                            <property name="icon_size">2</property>
+                            <property name="icon_size">1</property>
                           </object>
                           <packing>
                             <property name="tab_fill">False</property>
@@ -1580,7 +1605,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">History Editor</property>
                             <property name="stock">gtk-sort-ascending</property>
-                            <property name="icon_size">2</property>
+                            <property name="icon_size">1</property>
                           </object>
                           <packing>
                             <property name="position">1</property>
@@ -1605,7 +1630,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Library</property>
                             <property name="stock">gtk-index</property>
-                            <property name="icon_size">2</property>
+                            <property name="icon_size">1</property>
                           </object>
                           <packing>
                             <property name="position">2</property>
@@ -1630,7 +1655,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Outline Editor</property>
                             <property name="stock">OutlineEditor</property>
-                            <property name="icon_size">2</property>
+                            <property name="icon_size">1</property>
                           </object>
                           <packing>
                             <property name="position">3</property>
@@ -1700,6 +1725,7 @@
                 <property name="can_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -1716,6 +1742,7 @@
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="image">ImportImage</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -1768,6 +1795,7 @@
                 <property name="can_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -1784,6 +1812,7 @@
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -1842,6 +1871,7 @@
                 <property name="can_default">True</property>
                 <property name="receives_default">False</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -1858,6 +1888,7 @@
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -1926,6 +1957,7 @@
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="receives_default">False</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -1941,6 +1973,7 @@
                 <property name="can_default">True</property>
                 <property name="receives_default">False</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -1957,6 +1990,7 @@
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -2113,6 +2147,7 @@
                 <property name="can_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -2129,6 +2164,7 @@
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <property name="always_show_image">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
