@@ -85,6 +85,7 @@
         <property name="can_focus">False</property>
         <property name="use_underline">True</property>
         <property name="use_stock">True</property>
+        <property name="always_show_image">True</property>
         <signal name="activate" handler="on_remove_activate" swapped="no"/>
       </object>
     </child>
