@@ -1,5 +1,10 @@
 2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* BrowserWindow.xml:
+	* OutlineEditor.xml: 
+
+2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineTreeModel.cpp: 
 
 2014-05-20  Holger Seelig  <holger.seelig@yahoo.de>
